--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,5 +99,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.3.0'
     implementation 'com.github.githubwing:ByeBurger:1.2.3'
     implementation 'q.rorbin:VerticalTabLayout:1.2.5'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-x'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-x'
 
 }
