--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,5 +101,7 @@ dependencies {
     implementation 'q.rorbin:VerticalTabLayout:1.2.5'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-x'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-x'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.49-androidx'
+    implementation 'com.youth.banner:banner:2.1.0'
 
 }
