--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,14 +58,13 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.alibaba:fastjson:1.2.58'
 
-    // retrofit
+    // net
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-
-    // okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'me.jessyan:retrofit-url-manager:1.4.0'
 
     // rxjava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
@@ -94,6 +93,16 @@ dependencies {
     // butterknife
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+
+    // httpDns 优化
+    api ('com.aliyun.ams:alicloud-android-httpdns:1.3.2@aar') {
+        transitive true
+    }
+
+    // performance
+    implementation 'com.facebook.soloader:soloader:0.8.0'
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.4.2'
 
     // other
     implementation 'com.airbnb.android:lottie:2.3.0'
