--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     // rxjava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.13'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.0'
 
     // hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
