--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,10 +113,10 @@ dependencies {
     // other
     implementation 'com.airbnb.android:lottie:2.3.0'
     implementation 'com.github.githubwing:ByeBurger:1.2.3'
-    implementation 'q.rorbin:VerticalTabLayout:1.2.5'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-x'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-x'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.49-androidx'
     implementation 'com.youth.banner:banner:2.1.0'
+    implementation 'com.hyman:flowlayout-lib:1.1.2'
 
 }
