--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         mavenCentral() // add repository
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:4.2.0'
 
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
 
